Parallel Linkage added